--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">Team Name</a>
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">Team Trendy</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
@@ -35,7 +35,7 @@
                 <ul class="navbar-nav ml-auto">
 
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+                        <a class="nav-link js-scroll-trigger" href="https://github.com/csging/trendylanding.git">Github</a>
                     </li>
                 </ul>
             </div>
@@ -74,17 +74,26 @@
     <footer>
         <div class="container">
             <p>&copy; Trendy Map 2018. All Rights Reserved.</p>
-            <!-- <ul class="list-inline">
+            <ul class="list-inline">
+                <!-- <li class="list-inline-item">
+                    <a href="https://github.com/csging/trendylanding.git">Github</a>
+                </li> -->
                 <li class="list-inline-item">
-                    <a href="#">Privacy</a>
+                    <a href="https://github.com/csging">Christian Gingrich</a>
                 </li>
                 <li class="list-inline-item">
-                    <a href="#">Terms</a>
+                    <a href="https://github.com/AnthonyWilson1">Anthony Cortez</a>
                 </li>
                 <li class="list-inline-item">
-                    <a href="#">FAQ</a>
+                    <a href="https://github.com/lolaliz">Elizabeth Martinez</a>
                 </li>
-            </ul> -->
+                <li class="list-inline-item">
+                    <a href="https://github.com/lpaulghub">Larry Paul</a>
+                </li>
+                <li class="list-inline-item">
+                    <a href="https://github.com/kyoukel">Kimberly Youkel</a>
+                </li>
+            </ul>
         </div>
     </footer>
 
